Table - scrollable responsive tables refactor - back to boolean scrollable and scrollbar params fixed (ED-187)

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,12 +41,12 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: #eeeeee;
-  border-radius: 5.5px;
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-corner {
   background-color: rgba(white, 0.25);
-  border-radius: 5.5px;
+  border-radius: 100%;
 }
 
 :global(.ReactModal__Content) {
